Try with executionMode

--- a/renovate.json
+++ b/renovate.json
@@ -20,6 +20,7 @@
         ],
         "fileFilters": [
           "./public/mockServiceWorker.js"
-        ]
+        ],
+        "executionMode": "update"
     }
   }
